Update Mark credit and fix the spacing in the meta text area

--- a/themes/gfsc/assets/sass/pages/_project.sass
+++ b/themes/gfsc/assets/sass/pages/_project.sass
@@ -61,6 +61,7 @@
       margin: 0
     &__value
       color: $primary
+      margin-left: 0.4rem
       a
         color: $primary
         margin: 0 0.25rem
